--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <title>Kip's OdinProject Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="container">
       <div id="screen"></div>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
-        <button>+</button>
-        <button>-</button>
-        <button>x</button>
-        <button>÷</button>
-        <button>=</button>
-        <button>Clear</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="control operator">x</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="control operator">÷</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="control operator">+</button>
+        <button class="number">0</button>
+        <button class="control" id="equals">=</button>
+        <button class="control" id="clear">Clear</button>
+        <button class="control operator">-</button>
     </div>
   </body>
   <script src="script.js"></script>
